--- a/estilo.css
+++ b/estilo.css
@@ -12,7 +12,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #e3f2fd;
+    background: #c5a1fb;
 }
 
 .wrapper{
@@ -22,13 +22,13 @@ body{
     overflow: hidden;
     flex-direction: column;
     justify-content: center;
-    background: #293447;
+    background: #422352;
     border-radius: 5px;
-    box-shadow: 0 20px 40px rgba(52, 87, 220, 0.2);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
 }
 
 .game-details{
-    color: #b8c6dc;
+    color: #da5efd;
     font-weight: 500;
     font-size: 1.2rem;
     padding: 20px 27px;
@@ -40,7 +40,7 @@ body{
     height: 100%;
     width: 100%;
     display: grid;
-    background: #212837;
+    background: #b377eb;
     grid-template: repeat(30, 1fr) / repeat(30, 1fr);
 }
 
@@ -49,7 +49,7 @@ body{
 }
 
 .play-board .head{
-    background: #60cbff;
+    background: #b84afd;
 }
 
 .controls{
@@ -61,10 +61,10 @@ body{
     padding: 25px 0;
     text-align: center;
     font-size: 1.3rem;
-    color: #b8c6dc;
+    color: #d5a1f7;
     width: calc(100% / 4);
     cursor: pointer;
-    border-right: 1px solid #171b26;
+    border-right: 1px solid #6917d5;
 }
 
 @media screen and (max-width: 800px) {
